--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My test page</title>
   </head>
   <body>
+    <p> about 28 years ago</p>
     <script src="./index.js"></script>
   </body>
 </html>
